refactor: use GeneralException for domain errors and preserve cause